--- a/src/sass/sougi.scss
+++ b/src/sass/sougi.scss
@@ -3,13 +3,15 @@ section {
     flex-direction: column;
 
     button {
-        border-radius: 5px;
-        background-color: green;
-        padding: 5px;
+        border: transparent;
+        border-radius: 15px;
+        background-color: #97BF3A;
+        padding: 15px;
         text-align: center;
         color: white;
         margin-top: 30px;
-        width: 300px;
+        width: 280px;
+        font-size: 20px;
     }
 
     .breadcrumbs {
@@ -80,7 +82,7 @@ section {
 
 
             .local-nav-content01-title {
-                background-color: skyblue;
+                background-color: #9EDDCD;
                 color: #fff;
             }
 
@@ -97,7 +99,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: skyblue;
+                border-color: #9EDDCD;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -108,7 +110,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: skyblue;
+                border-color: #9EDDCD;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -119,7 +121,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: skyblue;
+                border-color: #9EDDCD;
                 border-width: thin;
 
                 font-size: 21px;
@@ -131,7 +133,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: skyblue;
+                border-color: #9EDDCD;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -142,7 +144,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: skyblue;
+                border-color: #9EDDCD;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -153,7 +155,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: skyblue;
+                border-color: #9EDDCD;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -164,7 +166,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: skyblue;
+                border-color: #9EDDCD;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -175,7 +177,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: skyblue;
+                border-color: #9EDDCD;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -186,7 +188,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: skyblue;
+                border-color: #9EDDCD;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -197,7 +199,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: skyblue;
+                border-color: #9EDDCD;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -208,7 +210,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: skyblue;
+                border-color: #9EDDCD;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -219,7 +221,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: skyblue;
+                border-color: #9EDDCD;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -315,7 +317,7 @@ section {
 
 
             .local-nav-content02-title {
-                background-color: orange;
+                background-color: #F18972;
                 color: #fff;
             }
 
@@ -332,7 +334,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: orange;
+                border-color: #F18972;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -343,7 +345,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: orange;
+                border-color: #F18972;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -354,7 +356,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: orange;
+                border-color: #F18972;
                 border-width: thin;
 
                 font-size: 21px;
@@ -366,7 +368,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: orange;
+                border-color: #F18972;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -377,7 +379,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: orange;
+                border-color: #F18972;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -388,7 +390,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: orange;
+                border-color: #F18972;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -399,7 +401,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: orange;
+                border-color: #F18972;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -410,7 +412,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: orange;
+                border-color: #F18972;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -475,7 +477,7 @@ section {
 
 
             .local-nav-content03-title {
-                color: orange;
+                color: #F18972;
             }
 
             .local-nav-content03-01 {
@@ -484,7 +486,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: skyblue;
+                border-color: #9EDDCD;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -495,7 +497,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: skyblue;
+                border-color: #9EDDCD;
                 border-width: thin;
                 font-size: 21px;
             }
@@ -506,7 +508,7 @@ section {
                 border-left: transparent;
                 border-right: transparent;
                 /* 上辺・左辺・右辺が透明になる */
-                border-color: skyblue;
+                border-color: #9EDDCD;
                 border-width: thin;
 
                 font-size: 21px;
@@ -556,7 +558,7 @@ section {
             }
 
             .content01-little-box {
-                background-color: orange;
+                background-color: #F18972;
                 width: 20px;
                 height: 20px;
                 // display: inline-block;
@@ -567,14 +569,18 @@ section {
             }
 
             .content-title {
-                margin-left: 10px;
+                margin-left: 35px;
                 font-size: 25px;
-                float: left;
-
+                text-align: left;
             }
 
             .content01-text01 {
                 margin-bottom: 20px;
+                text-align: left;
+            }
+
+            .content01-text02 {
+                text-align: left;
             }
 
             .content01-circle {
@@ -587,7 +593,7 @@ section {
 
 
             .content02-little-box {
-                background-color: skyblue;
+                background-color: #9EDDCD;
                 width: 20px;
                 height: 20px;
                 // display: inline-block;
@@ -595,6 +601,10 @@ section {
                 float: left;
                 margin-top: 8px;
 
+            }
+
+            .content-text-most {
+                text-align: left;
             }
 
             // .content02-title {
@@ -633,6 +643,10 @@ section {
     /* スマホ対応 */
 
 
+    button {
+        width: 80vw;
+    }
+
 
 
 
@@ -647,25 +661,81 @@ section {
 
 
 
+    .accordion {
 
+        div[class^="local-nav-content"] {
+            // .local-nav-content-sp01 {
+            display: none;
 
+            p {
+                display: block;
+                text-align: center;
+                padding: 0 .8em 1.4em 1em;
+                color: #555;
+                background-color: white;
+                line-height: 1.8;
 
+                width: 100vw;
+                margin: 0 auto;
+                padding-top: 10px;
+                padding-bottom: 10px;
 
+                border: solid;
+                border-top: transparent;
+                border-left: transparent;
+                border-right: transparent;
+                /* 上辺・左辺・右辺が透明になる */
+                border-color: #9EDDCD;
+                border-width: thin;
+                font-size: 21px;
+
+            }
+        }
+
+        // .local-nav-content-sp02 {
+        //     display: none;
+
+        //     p {
+        //         display: block;
+        //         text-align: center;
+        //         padding: 0 .8em 1.4em 1em;
+        //         color: #555;
+        //         background-color: white;
+        //         line-height: 1.8;
+
+        //         width: 100vw;
+        //         margin: 0 auto;
+        //         padding-top: 10px;
+        //         padding-bottom: 10px;
+
+        //         border: solid;
+        //         border-top: transparent;
+        //         border-left: transparent;
+        //         border-right: transparent;
+        //         /* 上辺・左辺・右辺が透明になる */
+        //         border-color: #f18972;
+        //         border-width: thin;
+        //         font-size: 21px;
+
+        //     }
+    }
 
 
     .accordion ul {
+
         width: 100%;
         padding: 0;
     }
 
     .accordion li {
+
         position: relative;
         border-bottom: 1px solid white;
         list-style: none;
     }
 
     .accordion li:first-child {
-        display: none;
+
         border-top: 1px solid white;
     }
 
@@ -673,28 +743,50 @@ section {
         display: block;
         text-decoration: none;
         cursor: pointer;
-        padding: 1.5em 1em;
+        // padding: 1.5em 0;
         position: relative;
     }
+
+    .accordion>ul>li>a h5 {
+        color: white;
+        text-align: left;
+        padding-top: 15px;
+        margin-bottom: 15px;
+        margin-left: 25px;
+        font-size: 20px;
+        font-weight: bold;
+
+    }
+
+
 
     // .accordion>ul>li>a h5:hover {
     //     // color: #111;
     //     text-decoration: none;
     // }
 
-    .accordion>ul>li>.local-nav-content01-01 {
+    .accordion>ul>li>p {
         display: none;
-        text-align: left;
+        text-align: center;
         padding: 0 .8em 1.4em 1em;
         color: #555;
+        background-color: white;
         line-height: 1.8;
 
 
-        width: 85%;
+        width: 100vw;
         margin: 0 auto;
         padding-top: 10px;
         padding-bottom: 10px;
 
+        border: solid;
+        border-top: transparent;
+        border-left: transparent;
+        border-right: transparent;
+        /* 上辺・左辺・右辺が透明になる */
+        border-color: #9EDDCD;
+        border-width: thin;
+        font-size: 21px;
 
 
     }
@@ -755,7 +847,28 @@ section {
 
 
 
+
+
+    .local-nav-content01-01 {
+
+        background-color: white;
+        width: 100vw;
+    }
+
+    .local-nav-content01-02 {
+
+        background-color: white;
+        width: 100vw;
+    }
+
+
+
+
+
+
+
     .head-bar01 {
+        display: none;
         box-sizing: border-box;
         height: 50px;
         padding: 10px 2.5%;
@@ -833,6 +946,7 @@ section {
 
 
     .head-bar02 {
+        display: none;
         box-sizing: border-box;
         height: 50px;
         padding: 10px 2.5%;
@@ -972,6 +1086,7 @@ section {
                 .content-title {
                     // order: 4;
                     font-size: 19px;
+                    margin-left: 25px;
 
                 }
 
@@ -1000,9 +1115,13 @@ section {
 
 
 
-@media screen and (min-width: 768px) {
-    /* pc対応 */
 
+@media screen and (min-width: 768px) {
+
+    /* pc対応 */
+    .accordion {
+        display: none;
+    }
 
     .top-image {
         width: 1200px;
